--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </aside>
       <hgroup class="auto-fadein">
         <h1>Plotting in R</h1>
-        <h2>http://cogworks.cogsci.rpi.edu/plotting-in-r</h2>
+        <h2>http://ryanhope.github.com/plotting-in-r</h2>
         <p>Ryan Hope<br/>CogWorks Lab, Rensselaer Polytechnic Institute</p>
       </hgroup>
           </slide>
@@ -94,7 +94,7 @@
   <h2>Test Data</h2>
 </hgroup>
 <article class = 'flexbox vcenter'>
-<pre><code class="r">source(&quot;http://cogworks.cogsci.rpi.edu/plotting-in-r/data.R&quot;)
+<pre><code class="r">source(&quot;https://raw.github.com/RyanHope/plotting-in-r/gh-pages/data.R&quot;)
 </code></pre>
 
 </article>
@@ -112,7 +112,7 @@ str(d1)
 </code></pre>
 
 <pre><code>## &#39;data.frame&#39;:    200 obs. of  3 variables:
-##  $ y   : num  0.201 0.499 -0.143 -0.128 -0.114 ...
+##  $ y   : num  0.2224 0.1602 -0.2249 0.0778 -0.2146 ...
 ##  $ x   : num  -3.14 -3.08 -3.01 -2.95 -2.89 ...
 ##  $ type: Factor w/ 2 levels &quot;cos&quot;,&quot;sin&quot;: 2 2 2 2 2 2 2 2 2 2 ...
 </code></pre>
@@ -132,8 +132,8 @@ str(d2)
 
 <pre><code>## &#39;data.frame&#39;:    100 obs. of  3 variables:
 ##  $ x    : num  -3.14 -3.08 -3.01 -2.95 -2.89 ...
-##  $ y.sin: num  0.201 0.499 -0.143 -0.128 -0.114 ...
-##  $ y.cos: num  -1.184 -0.682 -1.217 -0.71 -0.68 ...
+##  $ y.sin: num  0.2224 0.1602 -0.2249 0.0778 -0.2146 ...
+##  $ y.cos: num  -0.707 -0.675 -0.624 -1.04 -0.943 ...
 </code></pre>
 
   </article>
