add download ribbon

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <h2>http://ryanhope.github.com/plotting-in-r</h2>
         <p>Ryan Hope<br/>CogWorks Lab, Rensselaer Polytechnic Institute</p>
       </hgroup>
+      <a href="https://github.com//plotting-in-r/zipball/gh-pages" class="example">
+        Download
+      </a>
           </slide>
 
     <!-- SLIDES -->
@@ -112,7 +115,7 @@ str(d1)
 </code></pre>
 
 <pre><code>## &#39;data.frame&#39;:    200 obs. of  3 variables:
-##  $ y   : num  0.2224 0.1602 -0.2249 0.0778 -0.2146 ...
+##  $ y   : num  0.335 -0.262 -0.4 -0.3 0.171 ...
 ##  $ x   : num  -3.14 -3.08 -3.01 -2.95 -2.89 ...
 ##  $ type: Factor w/ 2 levels &quot;cos&quot;,&quot;sin&quot;: 2 2 2 2 2 2 2 2 2 2 ...
 </code></pre>
@@ -132,8 +135,8 @@ str(d2)
 
 <pre><code>## &#39;data.frame&#39;:    100 obs. of  3 variables:
 ##  $ x    : num  -3.14 -3.08 -3.01 -2.95 -2.89 ...
-##  $ y.sin: num  0.2224 0.1602 -0.2249 0.0778 -0.2146 ...
-##  $ y.cos: num  -0.707 -0.675 -0.624 -1.04 -0.943 ...
+##  $ y.sin: num  0.335 -0.262 -0.4 -0.3 0.171 ...
+##  $ y.cos: num  -0.97 -0.865 -0.57 -0.812 -1.31 ...
 </code></pre>
 
   </article>
